tests/functional/lang/eval-fail-derivationOf-empty-string.err.exp
error:
       … while calling the 'derivationOf' builtin
         at /pwd/lang/eval-fail-derivationOf-empty-string.nix:1:1:
            1| builtins.derivationOf ""
             | ^
            2|

       error: '' is not a valid store path
